syntax = "proto3";

package core;

option go_package = "tenkhours/proto/pb/core";


message Category {
  string id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  string character_id = 4;
  string name = 5;
  optional string description = 6;
  CategoryStyle style = 7;
}

message CategoryStyle {
  string color = 1;
  string icon = 2;
}

message CategoryInput {
  optional string id = 1;
  string name = 2;
  optional string description = 3;
  CategoryStyleInput style = 4;
}

message CategoryStyleInput {
  string color = 1;
  string icon = 2;
}